Car list moved to constant field